tests/neg/i18545.check
-- [E173] Reference Error: tests/neg/i18545.scala:16:20 ----------------------------------------------------------------
16 |  def test: IOLocal.IOLocalImpl[Int] = // error
   |            ^^^^^^^^^^^^^^^^^^^
   |class IOLocalImpl cannot be accessed as a member of iolib.IOLocal.type from the top-level definitions in package tests.
   |  private[IOLocal] class IOLocalImpl can only be accessed from object IOLocal in package iolib.
-- [E173] Reference Error: tests/neg/i18545.scala:17:24 ----------------------------------------------------------------
17 |    IOLocal.IOLocalImpl.apply(42) // error
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^
   |method apply cannot be accessed as a member of iolib.IOLocal.IOLocalImpl.type from the top-level definitions in package tests.
   |  private[IOLocal] method apply can only be accessed from object IOLocal in package iolib.
-- [E050] Type Error: tests/neg/i18545.scala:18:22 ---------------------------------------------------------------------
18 |  def test2 = IOLocal.IOLocalImpl(42) // error
   |              ^^^^^^^^^^^^^^^^^^^
   |              object IOLocalImpl in object IOLocal does not take parameters
   |
   | longer explanation available when compiling with `-explain`
-- [E173] Reference Error: tests/neg/i18545.scala:19:22 ----------------------------------------------------------------
19 |  def test3 = IOLocal.AltIOLocalImpl.apply(42) // error
   |              ^^^^^^^^^^^^^^^^^^^^^^
   |object AltIOLocalImpl cannot be accessed as a member of iolib.IOLocal.type from the top-level definitions in package tests.
   |  private[IOLocal] object AltIOLocalImpl can only be accessed from object IOLocal in package iolib.
-- [E173] Reference Error: tests/neg/i18545.scala:20:22 ----------------------------------------------------------------
20 |  def test4 = IOLocal.AltIOLocalImpl(42) // error
   |              ^^^^^^^^^^^^^^^^^^^^^^
   |object AltIOLocalImpl cannot be accessed as a member of iolib.IOLocal.type from the top-level definitions in package tests.
   |  private[IOLocal] object AltIOLocalImpl can only be accessed from object IOLocal in package iolib.
